# aureacore

./: .clippy.toml  .gitconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md  Taskfile.yml  codecov.yml  coverage-1309-1268882207847554661_0.profraw  coverage-13639-1268882207847554661_0.profraw  coverage-96166-11368388280662082685_0.profraw  coverage-96166-5284706903364587066_0.profraw  coverage-96169-18412381528301925003_0.profraw  coverage-97107-11368388280662082685_0.profraw  coverage-97107-5284706903364587066_0.profraw  coverage-97388-11368388280662082685_0.profraw  coverage-97388-5284706903364587066_0.profraw  coverage-97391-1268882207847554661_0.profraw  coverage.lcov  deny.toml  docker-compose.dev.yml  package.json
.act/: actual-release-test.yml  changelog-script-test.yml  ci-test.yml  event.json  release-test.yml
.cargo/: config.toml
.cursor/rules/: ai-pairing.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: update-changelog.js
.github/workflows/: ci.yml  coverage.yml  release.yml
.hooks/: pre-commit  pre-push
.husky/: pre-commit  pre-push
api/: Cargo.toml
api/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: AI_PAIRING.md  README.md  RELEASE_PROCESS.md  Testing-GitHub-Actions.md
docs/adr/: 0000-record-architecture-decisions.md  0001-initial-architecture.md  0002-backend-language-choice.md  0003-cap-considerations.md  0004-framework-selection.md  README.md  template.md
docs/api/: README.md
docs/design/: schema-module.md  service-registry.md
docs/guides/: README.md
plugins/: Cargo.toml
plugins/src/: lib.rs
scripts/: check.sh
src/: error.rs  lib.rs  main.rs
src/registry/: dependency.rs  git.rs  mod.rs  service.rs  store.rs
src/schema/: mod.rs  root.rs  service.rs  validation.rs
tests/: dependency_management_test.rs  dependency_validation_test.rs
wiki/: Dependency-Management-Summary.md  Known-Issues.md
