[package]
name = "aureacore"
version = "0.1.0"
edition = "2021"
description = "Service catalog and configuration management for phicd"
authors = ["SpiralHouse"]
license = "Apache-2.0 WITH Commons-Clause"

[workspace]
members = ["core", "api", "plugins"]

[workspace.metadata.release]
# Configure the tag format
tag-prefix = "v"
# GitHub release configuration
release = true
publish = false
conventional-commits = true

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Schema Validation
jsonschema = "0.17"
schemars = { version = "0.8", features = ["derive"] }
semver = "1.0"

# Git Integration
git2 = { version = "0.18", features = ["vendored-openssl"] }

# Date and Time
chrono = { version = "0.4.35", features = ["serde"] }
time = "0.3.34"

# Async Runtime and Utils
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0"

# Redis
redis = { version = "0.29", features = ["tokio-comp", "cluster"] }
bb8-redis = "0.21"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.4", features = ["derive"] }

# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.10"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
