[package]
name = "aureacore-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for AureaCore service catalog"
authors = ["SpiralHouse"]
license = "Apache-2.0 WITH Commons-Clause"

[dependencies]
# Redis
redis = { workspace = true }
bb8-redis = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true } 